test/files/neg/t0699.check
<<<<<<< HEAD
B.scala:2: error: illegal inheritance from sealed trait T
  trait T1 extends A.T
                     ^
B.scala:3: error: illegal inheritance from sealed class C
  trait T2 extends A.C
                     ^
B.scala:4: error: illegal inheritance from sealed class C
=======
B.scala:2: error: illegal inheritance from sealed trait T: t0699/B.scala != t0699/A.scala
  trait T1 extends A.T
                     ^
B.scala:3: error: illegal inheritance from sealed class C: t0699/B.scala != t0699/A.scala
  trait T2 extends A.C
                     ^
B.scala:4: error: illegal inheritance from sealed class C: t0699/B.scala != t0699/A.scala
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  class C1 extends A.C
                     ^
three errors found
